Update Makefile + One Click Installer

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-OKTA_ORG=fgrasso-oie.okta.com
+OKTA_ORG=myorg.okta.com
 LDAP_ORGANISATION=Atko Inc
 LDAP_DOMAIN=atko.local
 LDAP_BASE_DN=dc=atko,dc=local   # Note: must be derived from LDAP_DOMAIN.
