--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 OKTA_ORG=fgrasso-oie.okta.com
-LDAP_ORGANISATION=Atko Inc
-LDAP_DOMAIN=atko.local
-LDAP_BASE_DN=dc=atko,dc=local   # Note: must be derived from LDAP_DOMAIN.
-                                # I.e LDAP_DOMAIN=atko.local -> LDAP_BASE_DN=dc=atko,dc=local 
-LDAP_ADMIN_PASSWORD=adminpassword
+LDAP_ORGANISATION=The Galaxy
+LDAP_DOMAIN=galaxy.universe
+LDAP_BASE_DN=dc=galaxy,dc=universe   # Note: must be derived from LDAP_DOMAIN.
+                                     # I.e LDAP_DOMAIN=galaxy.universe -> LDAP_BASE_DN=dc=galaxy,dc=universe 
+LDAP_ADMIN_PASSWORD=adminpassword    # Change it!
+LDAP_CONFIG_PASSWORD=configpassword  # Change it!
